Table Supplier {
    supplier_id int [pk, increment]
    s_name varchar(120)
    contact_name varchar(120)
    email varchar(120)
    phone varchar(15)
    country varchar(80)
    address varchar(250)
    rating float
    status varchar(15)
}

Table SupplierContract {
    contract_id int [pk, increment]
    supplier_id int
    start_date date
    end_date date
    contract_details varchar(1500)
    terms varchar(1500)
    status varchar(15)
}

Table SupplierProducts {
    supplier_product_id int [pk, increment]
    supplier_id int
    product_id int
    cost decimal(10, 2)
    delivery_lead_time int
}

Table Products {
    product_id int [pk, increment]
    p_name varchar(120)
    description varchar(1500)
    category_id int
    weight float
    length float
    width float
    height float
    base_price decimal(10, 2)
    status varchar(15)
}

Table ProductCategories {
    category_id int [pk, increment]
    category_name varchar(120)
    parent_category_id int
    description varchar(1200)
}

Table Variants {
    variant_id int [pk, increment]
    variant_name varchar(120)
}

Table VariantOptions {
    option_id int [pk, increment]
    variant_id int
    option_value varchar(120)
}

Table ProductSKUs {
    sku_id int [pk, increment]
    product_id int
    sku_code varchar(20)
    barcode varchar(120)
    cost_price float
    status varchar(12)
}

Table ProductSKUOptions {
    sku_option_id int [pk, increment]
    sku_id int
    option_id int
}

Table Warehouse {
    warehouse_id int [pk, increment]
    name varchar(120)
    location varchar(250)
    capacity float
    manager_id int
}

Table WarehouseInventory {
    inventory_id int [pk, increment]
    warehouse_id int
    product_id int
    sku_id int
    quantity int
    reorder_level int
    last_restock_date date
}

Table InventoryMovement {
    movement_id int [pk, increment]
    inventory_id int
    quantity int
    movement_type varchar(15)
    movement_date date
    reason varchar(500)
}

Table Customers {
    customer_id int [pk, increment]
    name varchar(120)
    email varchar(120)
    phone varchar(15)
    billing_address varchar(250)
    shipping_address varchar(250)
    customer_type varchar(15)
}

Table Orders {
    order_id int [pk, increment]
    customer_id int
    order_date date
    status varchar(15)
    total_amount decimal(10, 2)
}

Table OrderItems {
    order_item_id int [pk, increment]
    order_id int
    product_id int
    sku_id int
    quantity int
    unit_price float
    discount float
    total_price float
}

Table OrderShipments {
    shipment_id int [pk, increment]
    order_id int
    shipment_date date
    expected_delivery_date date
    tracking_number int
    carrier_id int
    status varchar(15)
}

Table Carriers {
    carrier_id int [pk, increment]
    name varchar(120)
    contact_info varchar(15)
    country varchar(120)
    service_type varchar(10)
    rating float
}

Table DeliveryAreas {
    area_id int [pk, increment]
    area_name varchar(120)
}

Table CarrierDeliveryAreas {
    carrier_id int
    area_id int

    Primary Key (carrier_id, area_id)
}

Table Shipments {
    shipment_id int [pk, increment]
    carrier_id int
    shipment_type varchar(10)
    origin varchar(255)
    destination varchar(255)
    departure_date date
    estimated_arrival_date date
    actual_arrival_date date
    status varchar(15)
}

Table ShipmentItems {
    shipment_item_id int [pk, increment]
    shipment_id int
    order_item_id int
    quantity int
}

Table Employees {
    employee_id int [pk, increment]
    first_name varchar(120)
    last_name varchar(120)
    email varchar(120)
    phone varchar(15)
    department_id int
    position varchar(120)
    hire_date date
    status varchar(15)
}

Table Departments {
    department_id int [pk, increment]
    name varchar(120)
    manager_id int
}

Table Invoices {
    invoice_id int [pk, increment]
    order_id int
    invoice_date date
    due_date date
    amount_due decimal(10, 2)
    status varchar(15)
}

Table Payments {
    payment_id int [pk, increment]
    invoice_id int
    payment_date date
    amount decimal(10, 2)
    payment_method varchar(50)
}

Table SupplierPerformanceMetrics {
    supplier_id int
    metric_date date
    on_time_delivery_rate decimal(5, 2)
    quality_score decimal(5, 2)
    cost_efficiency decimal(10, 2)

    Primary Key (supplier_id, metric_date)
}

Table OrderFulfillmentMetrics {
    order_id int
    fulfillment_date date
    lead_time int
    order_accuracy_rate decimal(5, 2)
    return_rate decimal(5, 2)

    Primary Key (order_id, fulfillment_date)
}

Table InventoryTurnoverMetrics {
    product_id int
    warehouse_id int
    turnover_rate decimal(10, 2)
    period_start date
    period_end date

    Primary Key (product_id, warehouse_id, period_start, period_end)
}

Table UserRoles {
    role_id int [pk, increment]
    role_name varchar(50)
}

Table Users {
    user_id int [pk, increment]
    username varchar(50)
    password_hash varchar(255)
    role_id int
    last_login datetime
    status varchar(15)
}

Table AuditLogs {
    log_id int [pk, increment]
    user_id int
    action varchar(10)
    table_name varchar(100)
    record_id int
    timestamp datetime
    description varchar(255)
}

// Foreign Key Constraints
Ref: SupplierContract.supplier_id > Supplier.supplier_id
Ref: SupplierProducts.supplier_id > Supplier.supplier_id
Ref: SupplierProducts.product_id > Products.product_id
Ref: WarehouseInventory.warehouse_id > Warehouse.warehouse_id
Ref: WarehouseInventory.product_id > Products.product_id
Ref: WarehouseInventory.sku_id > ProductSKUs.sku_id
Ref: InventoryMovement.inventory_id > WarehouseInventory.inventory_id
Ref: Orders.customer_id > Customers.customer_id
Ref: OrderItems.order_id > Orders.order_id
Ref: OrderItems.product_id > Products.product_id
Ref: OrderItems.sku_id > ProductSKUs.sku_id
Ref: OrderShipments.order_id > Orders.order_id
Ref: OrderShipments.carrier_id > Carriers.carrier_id
Ref: CarrierDeliveryAreas.carrier_id > Carriers.carrier_id
Ref: CarrierDeliveryAreas.area_id > DeliveryAreas.area_id
Ref: Shipments.carrier_id > Carriers.carrier_id
Ref: ShipmentItems.shipment_id > Shipments.shipment_id
Ref: ShipmentItems.order_item_id > OrderItems.order_item_id
Ref: Departments.manager_id > Employees.employee_id
Ref: Invoices.order_id > Orders.order_id
Ref: Payments.invoice_id > Invoices.invoice_id
Ref: SupplierPerformanceMetrics.supplier_id > Supplier.supplier_id
Ref: OrderFulfillmentMetrics.order_id > Orders.order_id
Ref: InventoryTurnoverMetrics.product_id > Products.product_id
Ref: InventoryTurnoverMetrics.warehouse_id > Warehouse.warehouse_id
Ref: Users.role_id > UserRoles.role_id
Ref: AuditLogs.user_id > Users.user_id
